<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VeteransFinance</string>
    <string name="action_settings">Settings</string>
    <string name="semester_info">Semester Information</string>
    <string name="cal_vet">Cal Veterans!</string>
    <string name="semester_info_hint">Click to enter in semester information</string>
    <string name="exit_app_text">Exit</string>
    <string name="display_results">Display Results</string>
    <string name="University_Text">Pick University:</string>
    <string name="ChooseUniversityText">Choose University</string>
    <string name="UniZipcode">University Zipcode:</string>
    <string name="EligibilityPercentage">Elegibility Percentage:</string>
    <string name="secondScreen_title">Semester Info</string>
    <string name="semesters_left_hint">Enter the number of semesters left</string>
    <string name="semesters_left">Semesters Left:</string>\
    <string name="monthly_bah">Monthly BAH:</string>
    <string name="calculate_benefits">Calculate Benefits</string>
    <string name="number_units"># of Units:</string>
    <string name="tuition_fees">Tuition and Fees:</string>
    <string name="gi_bill_info">GI Bill Info</string>
    <string name="gi_bill_months_left">Months:</string>
    <string name="gi_bills_days">Days:</string>
    <string name="gi_bill_days_benefits">Days of Benefits:</string>
    <string name="semester_days">Days in Semester:</string>
    <string name="more_semester_info">More Semester Information</string>
    <string name="semester_units">Semester Units</string>
    <string name="spring_2015">Spring 2015:</string>
    <string name="fall_2015">Fall 2015:</string>
    <string name="spring_2016">Spring 2016:</string>
    <string name="fall_2016">Fall 2016:</string>
    <string name="spring_2017">Spring 2017:</string>
    <string name="fall_2017">Fall 2017:</string>
    <string name="spring_2018">Spring 2018:</string>
    <string name="fall_2018">Fall 2018:</string>

    <string-array name="university_array">
        <item>UC Berkeley</item>
        <item>UC Davis</item>
        <item>UC Irvine</item>
        <item>UC Los Angeles</item>
        <item>UC Merced</item>
        <item>UC Riverside</item>
        <item>UC San Diego</item>
        <item>UC Santa Barbara</item>
    </string-array>

</resources>
