<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center|top"
    tools:context=".MainActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:text="@string/semester_units"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/spring_2015"
            android:textSize="25sp"
            android:layout_margin="5dp"
            android:gravity="start"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="end"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/linearLayout2"
        android:padding="10dp"
        android:id="@+id/linearLayout3"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:text="@string/fall_2015"
            android:layout_margin="5dp"
            android:gravity="start"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="end"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/linearLayout3"
        android:padding="10dp"
        android:id="@+id/linearLayout4"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:text="@string/spring_2016"
            android:gravity="start"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:inputType="number"
            android:gravity="end" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/linearLayout4"
        android:padding="10dp"
        android:id="@+id/linearLayout5"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:text="@string/fall_2016"
            android:gravity="start"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:inputType="number"
            android:gravity="end" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/linearLayout5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:id="@+id/linearLayout6">

        <Button
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_marginRight="10dp"
            android:gravity="start"
            android:text="@string/more_semester_info"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="end"
            android:text="@string/calculate_benefits"/>
    </LinearLayout>

</RelativeLayout>