<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center|top"
    tools:context=".MainActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:text="@string/gi_bill_info"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2">

    <TextView
        android:layout_width="140dp"
        android:layout_height="match_parent"
        android:text="@string/EligibilityPercentage"
        android:textSize="25sp"
        android:gravity="start"/>

    <EditText
        android:layout_width="130dp"
        android:layout_height="match_parent"
        android:gravity="end"
        android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout3">

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:text="@string/gi_bill_months_left"
            android:textSize="25sp"
            android:gravity="start"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="end"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/linearLayout3"
        android:padding="10dp"
        android:id="@+id/linearLayout4"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:text="@string/gi_bills_days"
            android:gravity="start"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="end"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/linearLayout4"
        android:padding="10dp"
        android:id="@+id/linearLayout5"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:text="@string/gi_bill_days_benefits"
            android:gravity="start"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:gravity="end" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/linearLayout5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:id="@+id/linearLayout6">

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/semester_info"
            android:layout_gravity="center"/>

    </LinearLayout>

</RelativeLayout>
